crates/weft-snapshots/tests/snapshots/html/example-cell.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-cell as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Users</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="root" aria-label="Users">
  <table data-weft-id="users" aria-label="Users">
    <thead>
      <tr>
        <th data-weft-id="col-name" scope="col">Name</th>
      </tr>
    </thead>
    <tbody>
      <tr data-weft-id="row-ana">
        <td data-weft-id="cell-ana">
          <div data-weft-id="ana-name" data-weft-kind="text">Ana</div>
          <a data-weft-id="ana-link" role="link" tabindex="0" data-action="press:users.open">View</a>
        </td>
      </tr>
    </tbody>
  </table>
</main>
</body>
</html>
